<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">


    <TextView
        android:id="@+id/title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Contador de productos"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:textSize="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_linear"
            android:padding="@dimen/padding_linear"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/name_prod_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto_1"/>
            <TextView
                android:id="@+id/prod_1_results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_linear"
            android:padding="@dimen/padding_linear"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/name_prod_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto_2"/>
            <TextView
                android:id="@+id/prod_2_results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_linear"
            android:padding="@dimen/padding_linear"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/name_prod_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto_3"/>
            <TextView
                android:id="@+id/prod_3_results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_linear"
            android:padding="@dimen/padding_linear"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/name_prod_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto_4"/>
            <TextView
                android:id="@+id/prod_4_results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_linear"
            android:padding="@dimen/padding_linear"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/name_prod_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto_5"/>
            <TextView
                android:id="@+id/prod_5_results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_linear"
            android:padding="@dimen/padding_linear"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/name_prod_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto_6"/>
            <TextView
                android:id="@+id/prod_6_results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_linear"
            android:padding="@dimen/padding_linear"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/name_prod_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto_7"/>
            <TextView
                android:id="@+id/prod_7_results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_linear"
            android:padding="@dimen/padding_linear"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/name_prod_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto_8"/>
            <TextView
                android:id="@+id/prod_8_results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_linear"
            android:padding="@dimen/padding_linear"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/name_prod_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto_9"/>
            <TextView
                android:id="@+id/prod_9_results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_usuario"/>

    <TextView
        android:id="@+id/username_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_escribe_el_usuario_aqui"/>

    <TextView
        android:id="@+id/correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_correo_electronico"/>

    <TextView
        android:id="@+id/correo_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_escribe_el_usuario_aqui"/>

    <Button
        android:layout_gravity="center"
        android:id="@+id/button_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_enviar"/>

</LinearLayout>